Ajuste de diseno de toolbar, historial de cambios de producto, y compactacion de dimensiones